# Chimera_Client

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  ITERATION_PLAN.md  README.md  README_en.md  README_fa.md  README_ru.md  config_reality_min.json  config_reality_min.yaml  rust-toolchain.toml  start.sh
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  proxy-throughput-release.yml  proxy-throughput.yml  spell-check.yml
bench/: collect_env.py  format_throughput.py
clash-bin/: Cargo.toml
clash-bin/src/: main.rs
clash-bin/tests/data/config/: trojan-ws.json  vless-ws-tls.json
clash-dns/: Cargo.toml
clash-dns/src/: dummy_keys.rs  handler.rs  lib.rs  tls.rs  utils.rs
clash-doc/: Cargo.toml
clash-ffi/: Cargo.toml
clash-lib/: Cargo.toml
clash-lib/src/: lib.rs  session.rs
clash-lib/src/app/: logging.rs  mod.rs
clash-lib/src/app/api/: ipc.rs  mod.rs  runner.rs  websocket.rs
clash-lib/src/app/api/handlers/: config.rs  connection.rs  connections.rs  dns.rs  flows.rs  group.rs  logs.rs  memory.rs  mod.rs  provider.rs  proxy.rs  restart.rs  rule.rs  traffic.rs  user_stats.rs  utils.rs
clash-lib/src/app/api/middlewares/: auth.rs  fix_json_content_type.rs  websocket_uri_rewrite.rs
clash-lib/src/app/dispatcher/: dispatcher_impl.rs  mod.rs  statistics_manager.rs  tracked.rs
clash-lib/src/app/dns/: config.rs  dhcp.rs  dns_client.rs  filters.rs  helper.rs  mod.rs  rule_dispatch.rs  runtime.rs
clash-lib/src/app/dns/fakeip/: file_store.rs  mem_store.rs  mod.rs
clash-lib/src/app/dns/resolver/: enhanced.rs  mod.rs  system.rs  system_static_crt.rs
clash-lib/src/app/dns/server/: handler.rs  mod.rs
clash-lib/src/app/inbound/: manager.rs  network_listener.rs
clash-lib/src/app/net/: mod.rs
clash-lib/src/app/outbound/: manager.rs  mod.rs  utils.rs
clash-lib/src/app/profile/: mod.rs
clash-lib/src/app/remote_content_manager/: healthcheck.rs  mod.rs
clash-lib/src/app/remote_content_manager/providers/: fetcher.rs  file_vehicle.rs  http_vehicle.rs  mod.rs
clash-lib/src/app/remote_content_manager/providers/proxy_provider/: mod.rs  plain_provider.rs
clash-lib/src/app/router/: mod.rs
clash-lib/src/app/router/rules/: domain.rs  domain_keyword.rs  domain_suffix.rs  final_.rs  geodata.rs  geoip.rs  geosite.rs  ipcidr.rs  mod.rs
clash-lib/src/app/router/rules/geodata/: matcher_group.rs  mod.rs  str_matcher.rs
clash-lib/src/common/: errors.rs  geodata.rs  mmdb.rs  mod.rs  tls.rs  trie.rs  utils.rs
clash-lib/src/common/geodata/: mod.rs
clash-lib/src/common/http/: client.rs  mod.rs
clash-lib/src/common/io/: mod.rs  splice.rs
clash-lib/src/config/: def.rs  mod.rs
clash-lib/src/config/internal/: config.rs  convert.rs  listener.rs  mod.rs  proxy.rs  rule.rs
clash-lib/src/config/internal/convert/: general.rs  listener.rs  mod.rs  proxy_group.rs  rule_provider.rs  tun.rs
clash-lib/src/proxy/: datagram.rs  inbound.rs  mod.rs  snell.rs
clash-lib/src/proxy/converters/: hysteria2.rs  mod.rs  shadowsocks.rs  snell.rs  trojan.rs  utils.rs  vless.rs
clash-lib/src/proxy/direct/: datagram.rs  mod.rs
clash-lib/src/proxy/group/: mod.rs
clash-lib/src/proxy/group/fallback/: mod.rs
clash-lib/src/proxy/group/relay/: mod.rs
clash-lib/src/proxy/group/selector/: mod.rs
clash-lib/src/proxy/group/urltest/: mod.rs
clash-lib/src/proxy/http/inbound/: auth.rs  connector.rs  mod.rs  proxy.rs
clash-lib/src/proxy/hysteria2/: codec.rs  congestion.rs  datagram.rs  mod.rs  salamander.rs  udp_hop.rs
clash-lib/src/proxy/mixed/: mod.rs
clash-lib/src/proxy/reject/: mod.rs
clash-lib/src/proxy/shadowsocks/: mod.rs
clash-lib/src/proxy/shadowsocks/outbound/: mod.rs  stream.rs
clash-lib/src/proxy/socks/: mod.rs  socks5.rs
clash-lib/src/proxy/socks/inbound/: datagram.rs  mod.rs  stream.rs
clash-lib/src/proxy/socks/outbound/: datagram.rs  mod.rs
clash-lib/src/proxy/transport/: mod.rs  splice_tls.rs  tls.rs
clash-lib/src/proxy/transport/reality/: common.rs  crypto_connection.rs  crypto_handshake.rs  crypto_tls_stream.rs  mod.rs  reality_aead.rs  reality_client_connection.rs  reality_client_verify.rs  reality_records.rs  reality_tls13_keys.rs  reality_tls13_messages.rs  reality_util.rs  slide_buffer.rs
clash-lib/src/proxy/transport/shadow_tls/: mod.rs  stream.rs  utils.rs
clash-lib/src/proxy/transport/simple_obfs/: mod.rs  tls.rs
clash-lib/src/proxy/transport/sip003/: mod.rs
clash-lib/src/proxy/transport/v2ray/: mod.rs  websocket.rs
clash-lib/src/proxy/transport/ws/: handshake.rs  mod.rs  websocket.rs  websocket_early_data.rs
clash-lib/src/proxy/transport/xhttp/: mod.rs
clash-lib/src/proxy/trojan/: mod.rs
clash-lib/src/proxy/tun/: datagram.rs  inbound.rs  mod.rs  runner.rs  stream.rs
clash-lib/src/proxy/tun/routes/: linux.rs  mod.rs  windows.rs
clash-lib/src/proxy/utils/: mod.rs  proxy_connector.rs  socket_helpers.rs
clash-lib/src/proxy/utils/platform/: android.rs  apple.rs  mod.rs  win.rs
clash-lib/src/proxy/utils/test_utils/: mod.rs  noop.rs
clash-lib/src/proxy/utils/test_utils/docker_utils/: config_helper.rs  consts.rs  docker_runner.rs  mod.rs
clash-lib/src/proxy/vless/: datagram.rs  mod.rs  stream.rs  vision.rs
clash-lib/tests/: api_reload_tests.rs  api_tests.rs  dns_config_tests.rs  dns_real_traffic_tests.rs  socket_protection_guard_tests.rs  tun_fake_ip_real_tests.rs
clash-lib/tests/data/config/: trojan-ws.json
clash-lib/tests/data/config/dns/: full_dns.yaml  real_traffic_dns.yaml
clash-netstack/: Cargo.toml
clash-netstack/examples/: netstack_lwip.rs  netstack_smoltcp.rs  with_tun_rs.rs
clash-netstack/src/: device.rs  stack.rs  tcp_listener.rs  tcp_stream.rs  udp_socket.rs
clash-netstack/tests/: common.rs  integration_test.rs
clash-netstack/tests/mock_tun/: mod.rs
xhttp-h2-phaseb/: Cargo.toml  README.md
xhttp-h2-phaseb/src/: lib.rs
xhttp-h2-phaseb/src/proto/: meta.rs
xhttp-h2-phaseb/src/session/: mod.rs  store.rs  upload_queue.rs
