[workspace]
resolver = "3"
members = [
    "clash-bin",
    "clash-lib",
    "clash-doc",
    "clash-ffi",
    "clash-dns",
    "clash-netstack",
    "xhttp-h2-phaseb"
]


[workspace.package]
version = "0.13.0"
edition = "2024"
# homepage = "https://github.com/watfaq/clash-rs"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
debug = 2
panic = "abort"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
redundant_clone = "deny"
needless_collect = "deny"
