[package]
name = "clash-rs"
# repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
# authors = { workspace = true }

[features]
default = ["standard"]
standard = ["trojan", "ws"]

plus = ["standard", "onion"]
onion = []

ws = ["clash-lib/ws"]

tls = ["clash-lib/tls"]

trojan = ["clash-lib/trojan"]

perf = ["plus", "jemallocator"]
# for ci
jemallocator = ["dep:tikv-jemallocator"]

[dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

clap = { version = "4", features = ["derive"] }

clash-lib = { path = "../clash-lib", default-features = false }
