[package]
name = "clash-rs"
# repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
# authors = { workspace = true }

[features]
default = ["standard", "aws-lc-rs"]
standard = ["trojan", "ws", "tls", "hysteria"]

plus = ["standard", "onion"]
onion = []

ws = ["clash-lib/ws"]

tls = ["clash-lib/tls"]

trojan = ["clash-lib/trojan"]
hysteria = ["clash-lib/hysteria"]
tun = ["clash-lib/tun"]
tproxy = ["clash-lib/tproxy"]
redir = ["clash-lib/redir"]
http_port = ["clash-lib/http_port"]
aws-lc-rs = ["dep:aws-lc-rs", "clash-lib/aws-lc-rs"]
ring = ["clash-lib/ring"]
tracing = ["clash-lib/tracing"]

perf = ["plus", "jemallocator"]
# for ci
jemallocator = ["dep:tikv-jemallocator"]

[dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

clap = { version = "4", features = ["derive"] }

clash-lib = { path = "../clash-lib", default-features = false }
aws-lc-rs = { version = "1", optional = true, default-features = false, features = ["bindgen", "aws-lc-sys"] }
