[package]
name = "chimera-dns"
# repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
# authors = { workspace = true }

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
futures = "0.3"

async-trait = "0.1"

hickory-server = { version = "0.25", default-features = false, features = ["tls-ring", "https-ring", "h3-ring"] }
hickory-proto = "0.25"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
mockall = "0.14.0"

[lints]
workspace = true
