[package]
name = "chimera-dns"
# repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
# authors = { workspace = true }

[features]
default = ["aws-lc-rs"]
aws-lc-rs = [
    "rustls/aws-lc-rs",
    "hickory-server/https-aws-lc-rs",
    "hickory-server/h3-aws-lc-rs",
    "hickory-proto/dnssec-aws-lc-rs",
    "hickory-net/https-aws-lc-rs",
    "hickory-net/h3-aws-lc-rs",
]
ring = [
    "rustls/ring",
    "hickory-server/https-ring",
    "hickory-server/h3-ring",
    "hickory-proto/dnssec-ring",
    "hickory-net/https-ring",
    "hickory-net/h3-ring",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
futures = "0.3"
rustls-pemfile = "2"

async-trait = "0.1"

hickory-net = { version = "0.26", default-features = false }
hickory-server = { version = "0.26", default-features = false }
hickory-proto = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
webpki-roots = "1.0"

[dev-dependencies]
anyhow = "1"
env_logger = "0.11"
mockall = "0.14.0"

[lints]
workspace = true
