[package]
name = "clash-lib"
# repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
# authors = { workspace = true }


[dependencies]
# Error handing & logging
thiserror = "2"
anyhow = "1"
libc = "0.2"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
futures = "0.3"
async-trait = "0.1"
http = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio-rustls = { version = "0.26", optional = true }
webpki-roots = { version = "1.0", optional = true }
quinn = { version = "0.11", default-features = false, features = [
    "futures-io",
    "runtime-tokio",
    "rustls",
], optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn-proto = { version = "0.11.13", default-features = false, optional = true }
maxminddb = "0.27"
hickory-proto = "0.25"
url = { version = "2", optional = true }
ipnet = { version = "2" }
network-interface = { version = "2", optional = true }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

tracing = "0.1"
tracing-log = "0.2"
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
time = { version = "=0.3", features = ["macros", "local-offset"] }

rustls = { version = "0.23", default-features = false, optional = true }
rustls-pemfile = "2"

uuid = { version = "1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }

# dns
chimera-dns = { path = "../clash-dns", default-features = false }

# Macro Magic
educe = "0.6"

socket2 = { version = "0.6", features = ["all"] }

# experimental
downcast-rs = "2.0"

rand = "0.10"

chrono = { version = "0.4", features = ["serde"] }

sha2 = "0.10"
blake2 = { version = "0.10.6", optional = true }
digest = { version = "0.10.7", optional = true }

tokio-tungstenite = { version = "0.28.0", optional = true }
tun-rs = { version = "2", features = [
    "async",
    "async_framed",
], optional = true }
watfaq-netstack = { path = "../clash-netstack", optional = true }
smoltcp = { version = "0.12", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-udp",
    "socket-tcp",
], optional = true }
etherparse = { version = "0.19", optional = true }

base64 = "0.22"

aws-lc-rs = { version = "1", default-features = false, optional = true }

axum = { version = "0.8" }
tower = { version = "0.5", features = ["util"] }

tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

[features]
default = ["zero_copy", "tls", "aws-lc-rs", "tun"]

zero_copy = []

tls = ["dep:rustls", "dep:tokio-rustls", "dep:webpki-roots"]

aws-lc-rs = [
    "dep:aws-lc-rs",
    "rustls/aws-lc-rs",
    "quinn-proto?/rustls-aws-lc-rs",
]
ring = ["tls", "rustls/ring", "quinn-proto?/ring"]

ws = ["tokio-tungstenite"]

trojan = []
hysteria = [
    "tls",
    "dep:tokio-util",
    "dep:quinn",
    "dep:h3",
    "dep:h3-quinn",
    "dep:quinn-proto",
    "dep:blake2",
    "dep:digest",
]
tun = [
    "dep:tun-rs",
    "dep:watfaq-netstack",
    "dep:smoltcp",
    "dep:network-interface",
    "dep:url",
]
tproxy = ["dep:etherparse"]
redir = []
tracing = ["tokio/tracing"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_NetworkManagement_Rras",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
] }
